--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,4 +10,22 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'FreeSonarCloud'
+    organization: 'jefffordevops'
+    scannerMode: 'Other'
 - task: Maven@3
+  inputs:
+    mavenPomFile: 'pom.xml'
+    publishJUnitResults: true
+    testResultsFiles: '**/surefire-reports/TEST-*.xml'
+    javaHomeOption: 'JDKVersion'
+    mavenVersionOption: 'Default'
+    mavenAuthenticateFeed: false
+    effectivePomSkip: false
+    sonarQubeRunAnalysis: true
+    sqMavenPluginVersionChoice: 'latest'
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
